<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChqUseMainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="#ddd"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/title"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:padding="10dp" 
        android:background="#ddd" >

        <TextView
            android:id="@+id/screenOnOffLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/screenOnOffLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/screenOnOffValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/screenOnOffLabel"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/screenOnOffValue"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="17dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:background="#ddd"
         >

        <TextView
            android:id="@+id/lockUnlockValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lockUnlockLabel"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/lockUnlockValue"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lockUnlockLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/lockUnlockLabel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:layout_marginTop="81dp"
        android:gravity="center_horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/btnRefresh"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/btnRefreshLabel" />

        <Button
            android:id="@+id/btnReset"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:layout_toRightOf="@id/btnRefresh"
            android:text="@string/btnResetLabel" />
    </RelativeLayout>

</RelativeLayout>